# CrowdLens

./: CMakeLists.txt  Dockerfile  Doxyfile  HOGDetector.cpp  LICENSE  README.md  mount_command.sh  run_on_pi.sh
.github/workflows/: workflow.yml
docs/: architecture.md  hardware-setup.md
src/: config.yaml
src/AIDetection/: CMakeLists.txt  CrowdAnalyser.cpp  CrowdAnalyser.h  HOGDetector.cpp  HOGDetector.h  IFrameProcessor.h  OpenCVFrameProcessor.cpp  OpenCVFrameProcessor.h  StampedePredictor.cpp  StampedePredictor.h  Zone.cpp  Zone.h  ZoneManager.cpp  ZoneManager.h  main.cpp
src/AIDetection/test/: CMakeLists.txt  CrowdAnalyserTest.cpp  ZoneTest.cpp  test_hog.cpp
src/CameraCapture/: CMakeLists.txt  CameraFrameSource.cpp  CameraFrameSource.h  IFrameSource.h  VideoFileFrameSource.cpp  VideoFileFrameSource.h
src/CameraCapture/test/: CMakeLists.txt  CameraFrameSourceTest.cpp
src/Common/: AlertEvent.h  AlertRunnable.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  CppTimerCallbackInterface.h  CrowLenseState.h  CrowdMetrics.h  Runnable.h  TrafficEventHandler.h
src/Common/test/: CMakeLists.txt  ConfigLoaderTest.cpp
src/Display/: CMakeLists.txt  FrameOverlay.cpp  FrameOverlay.h
src/Display/test/: FrameOverlayTest.cpp
src/HardwareOutput/: BUZZEROutput.cpp  BuzzerOutput.h  CMakeLists.txt  GPIODigitalOutput.cpp  GPIODigitalOutput.h  LEDOutput.cpp  LEDOutput.h
src/HardwareOutput/test/: BuzzerOutputTest.cpp  CMakeLists.txt  LEDIntegrationTest.cpp  LEDOutputTest.cpp
src/IRSensor/: CMakeLists.txt  IRSensor.cpp  IRSensor.h
src/IRSensor/test/: CMakeLists.txt  IRSensorTest.cpp  config.yaml
src/Notification/: CMakeLists.txt  ConsoleEventHandler.cpp  ConsoleEventHandler.h  EmailNotification.cpp  EmailNotification.h
src/Notification/config/: ConfigLoader.cpp  ConfigLoader.h  EmailCredentials.cfg
src/Notification/test/: AlertDispatcherTest.cpp  CMakeLists.txt  LiveEmailTest.cpp  TestEmail.cpp  live_email_test
src/demo/: CMakeLists.txt  Main.cpp
